Prevent unnecessary horizontal scrollbar at small widths

--- a/files/style.css
+++ b/files/style.css
@@ -1,6 +1,5 @@
 body {
     padding: 20px;
-    width: 90%;
     max-width: 800px;
     margin: 0 auto;
     overflow-y: scroll;
